# arxiv-example-scraper

./: .env.template  Dockerfile  README.md  api_arxiv_articles.py  database_setup.py  docker-compose.yml  pyproject.toml  settings.py
db/: Dockerfile  arxiv_tables_setup.sql
