[tool.poetry]
name = "arxiv-example-scraper"
version = "0.1.0"
description = ""
authors = ["erinhmclark"]
readme = "README.md"
packages = [{include = "arxiv_example_scraper"}]

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.1"
requests = "^2.30.0"
sqlite-utils = "^3.31"
arxiv = "^1.4.7"
pyyaml = "^6.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
